[tool.poetry]
name = "sethfischer"
version = "0.1.0"
description = "Seth Fischer's blog."
authors = ["Seth Fischer <seth@fischer.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.6.0"
black = "^22.12.0"
flake8 = "^5.0.0"
ghp-import = "^2.0.1"
isort = "^5.9.3"
linkchecker = "^10.2.1"
rst2html = "^2020.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
