[tool.poetry]
name = "sethfischer"
version = "0.1.0"
description = "Seth Fischer's blog."
authors = ["Seth Fischer <seth@fischer.nz>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

black = "^24.4.2"
flake8 = "^7.0.0"
ghp-import = "^2.0.1"
isort = "^5.13.2"
linkchecker = "^10.4.0"
pelican = "^4.6.0"
rst2html = "^2020.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
